# supply-chain-macro-economic-signals

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md
macro_supply_signals/: __init__.py  catalog.py  client.py
macro_supply_signals/signals/: __init__.py  energy.py  fx.py  industrial.py  inflation.py  ppi.py
macro_supply_signals/sources/: fred.py
notebooks/: 00_quickstart.ipynb
scripts/: pull_cpi.py
tests/: test_catalog.py  test_client.py  test_fred.py  test_signals.py
