[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-supply-signals"
version = "0.1.0"
description = "Pull and normalise macro indicators relevant to supply-chain analysis"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
notebook = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["macro_supply_signals*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["notebooks/", "node_modules/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
